FIX: jumping caused by default field visibility logic [branches/20240830_acota_q13131][q13131]
git-svn-id: http://svn.resourcespace.com/svn/rs/branches/20240830_acota_q13131@25387 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/plugins/brand_guidelines/css/style.css
+++ b/plugins/brand_guidelines/css/style.css
@@ -257,7 +257,7 @@ form.guidelines .FormError {
 
 /* --- Deviation from standard behaviour (on purpose for UI/UX consistency/improvement) */
 /* Hide the FIELD_TYPE_TEXT_RICH label on manage/content.php */
-#Question_richtext label, #Question_caption {
+#Question_richtext label, #Question_image_size, #Question_caption {
     display: none;
 }
 #Question_richtext {
